HelloUltraviolet/Fixtures/RejectedSource/Expressions/TransmuteAlignMismatch/Source/Main.uv
//! Rejected transmute specimen for source and target alignment mismatch.

public procedure transmuteAlignMismatchReference() -> i32 {
    var result: i32 = 0
    let octets: [u8; 4] = [1, 2, 3, 4]
    unsafe {
        result = transmute<[u8; 4], i32>(octets)
    }
    return result
}
